feat(Project): atualizando project